5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4352/executions/1649_2443.log
== TEST (2019-04-11 18:43:43) 
-- CODE:
r = float(input("digite o raio: "))
a = float(input("digite a altura: "))
n = int(input("digite o numero do volume de ar: (1/2)"))
1 = 

-- ERROR:
File "XXXX", line 4
    1 = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:48) 
-- CODE:
r = float(input("digite o raio: "))
a = float(input("digite a altura: "))
n = int(input("digite o numero do volume de ar: (1/2)"))
1 = a

-- ERROR:
File "XXXX", line 4
    1 = a
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:43:53) 
-- CODE:
r = float(input("digite o raio: "))
a = float(input("digite a altura: "))
n = int(input("digite o numero do volume de ar: (1/2)"))


-- ERROR:
File "XXXX", line 4
    1 = a
    ^
SyntaxError: can't assign to literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:50:13) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o numero do volume de ar: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica
n11 = (4 * pi * r**3)/3 #volume da esfera
n2 = n11/n1

if n == "1":
	print(n1)
else:
	print(n2)
-- OUTPUT:
19.89818856869371
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:50:44) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o numero do volume de ar: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica
n11 = (4 * pi * r**3)/3 #volume da esfera
n2 = n11/n1

if n == "1":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
19.8982
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 18:50:51) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o numero do volume de ar: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica
n11 = (4 * pi * r**3)/3 #volume da esfera
n2 = n11/n1

if n == "1":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- EXECUTION TIME:
0.184757
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
19.8982
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
15.5182
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:50:52) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o numero do volume de ar: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica
n11 = (4 * pi * r**3)/3 #volume da esfera
n2 = n11/n1

if n == "1":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
19.8982
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:51:01) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o numero do volume de ar: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica
n11 = (4 * pi * r**3)/3 #volume da esfera
n2 = n1/n11

if n == "1":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
0.0503
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:51:07) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o numero do volume de ar: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica
n11 = (4 * pi * r**3)/3 #volume da esfera
n2 = n1/n11

if n == "1":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
0.0503
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:53:47) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica = volume de ar
n11 = (4 * pi * r**3)/3 #volume da esfera = combustivel 
n2 = n11/n1

if n == "2":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
19.8982
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:53:56) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica = volume de ar
n11 = (4 * pi * r**3)/3 #volume da esfera = combustivel 
n2 = n11/n1

if n == "2":
	print(round(n2, 4))
else:
	print(round(n1, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:54:21) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica = volume de ar
n11 = (4 * pi * r**3)/3 #volume da esfera = combustivel 
n2 = n11/n1

if n == "2":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
19.8982
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:54:29) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2 

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica = volume de ar
n11 = (4 * pi * r**3)/3 #volume da esfera = combustivel 
n2 = n11/n1

if n == "2":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
19.8982
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:55:16) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)"))

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica = volume de ar
n11 = (4 * pi * r**3)/3 #volume da esfera = combustivel 
n2 = n11/n1

if n == "2":
	print(round(n2, 4))
else:
	print(round(n1, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 18:55:40) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)"))

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica = volume de ar
n11 = (4 * pi * r**3)/3 #volume da esfera = combustivel 
n2 = n11/n1

if n == "2":
	print(round(n2, 4))
else:
	print(round(n1, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:46:36) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) # 1 é n1, 2 é n2

from math import *
n1 = ((pi * x**2) * (3 * r - x))/3 #calota esférica = volume de ar
n11 = (4 * pi * r**3)/3 #volume da esfera = combustível 
n2 = n11/n1

if n == "2":
	print(round(n2, 4))
else:
	print(round(n1, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:48:25) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n1 = (pi * x**2 * (3 * r - x))/3 #calota esférica = volume de ar
n11 = (4 * pi * r**3)/3 #volume da esfera = combustível 
n2 = n11/n1

if n == "2":
	print(round(n2, 4))
else:
	print(round(n1, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:51:14) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n1 = (pi * (x**2) * (3 * (r - x))/3) #calota esférica = volume de ar
n11 = (4 * (pi * (r**3)/3)) #volume da esfera = combustível 
n2 = n11/n1

if n == "2":
	print(round(n2, 4))
else:
	print(round(n1, 4))
-- OUTPUT:
7.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:52:25) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n1 = (pi * (x**2) * (3 * r) - x/3) #calota esférica = volume de ar
n11 = (4 * (pi * (r**3)/3)) #volume da esfera = combustível 
n2 = n11/n1

if n == "2":
	print(round(n2, 4))
else:
	print(round(n1, 4))
-- OUTPUT:
29.4539
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:54:58) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11/n1

if n == "2":
	print(round(n2, 4))
else:
	print(round(n1, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:55:46) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == "2":
	print(round(n2, 4))
else:
	print(round(n1, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:48) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == "1":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
169.9875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:56:55) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == "1":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- EXECUTION TIME:
0.207124
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
169.9875
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
288.4734
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:56:58) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == "1":
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
169.9875
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:57:27) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:57:35) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:57:40) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- EXECUTION TIME:
0.177104
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.6068
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
288.4734
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:57:40) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = int(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:59:04) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:59:14) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 19:59:23) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- EXECUTION TIME:
0.149961
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.6068
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
288.4734
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 19:59:25) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume: (1/2)")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:00:05) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 20:00:13) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- EXECUTION TIME:
0.167235
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.6068
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
288.4734
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:00:14) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:01:43) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume 1 ou 2: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 20:01:50) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume 1 ou 2: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- EXECUTION TIME:
0.186147
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.6068
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
288.4734
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:01:51) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume 1 ou 2: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = (pi * (x**2) * (3 * r) - x)/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:02:31) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume 1 ou 2: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = ((pi * (x**2) * (3 * r) - x))/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 20:02:37) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume 1 ou 2: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = ((pi * (x**2) * (3 * r) - x))/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- EXECUTION TIME:
0.18077
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.6068
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
288.4734
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:02:38) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume 1 ou 2: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = ((pi * (x**2) * (3 * r) - x))/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.6068
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-11 20:03:48) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume 1 ou 2: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = ((pi * (x**2)) * ((3 * r) - x))/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- OUTPUT:
9.0257
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-11 20:03:55) 
-- CODE:
r = float(input("digite o raio: "))
x = float(input("digite a altura: "))
n = float(input("digite o tipo de volume 1 ou 2: ")) #1 é n1, 2 é n2

from math import *
n11 = (4 * (pi *(r ** 3)))/3 #volume da esfera = combustível 
n1 = ((pi * (x**2)) * ((3 * r) - x))/3 #calota esférica = volume de ar
n2 = n11 - n1

if n == 1:
	print(round(n1, 4))
else:
	print(round(n2, 4))
-- EXECUTION TIME:
0.246758
-- TEST CASE 1:
---- input:
3.50
0.95
1
---- correct output:
9.0257
---- user output:
9.0257
-- TEST CASE 2:
---- input:
4.20
1.30
2
---- correct output:
290.3408
---- user output:
290.3408
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
